Changed destination URL back

--- a/vext-games/package.json
+++ b/vext-games/package.json
@@ -2,7 +2,7 @@
   "name": "tailwind-testing",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vextgames.com/",
+  "homepage": "http://TimothyChungYiuTing.github.io",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
